fix(doctor): keep migration confirm invariant isolated